Collapsing fixed and a bit nicer now

--- a/spider.css
+++ b/spider.css
@@ -61,6 +61,7 @@ h3.panel-title a{
   text-decoration: none;
 }
 
+
 h3.panel-title a::before{
   content:url(icons/arrows-collapse.svg);
   float: right;
@@ -75,6 +76,10 @@ h3.panel-title a.collapsed::before{
   background-color: #40AFE3;
   padding-bottom: 20px;
   padding-right: 20px;
+}
+
+.panel-heading:hover{
+  background-color: #26a3de;
 }
 
 .activity {
